k8s/argocd/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.223
